--- a/backend/login-v2/src/main/resources/application.properties
+++ b/backend/login-v2/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 
 spring.security.user.name=azad@gmail.com
 spring.security.user.password=1234
+
+jwt.signing.key.secret=mySecret
+jwt.get.token.uri=/authenticate
+jwt.refresh.token.uri=/refresh
+jwt.http.request.header=Authorization
+jwt.token.expiration.in.seconds=604800
